--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,21 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+        <!--        引入zxing 库依赖-->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.5.2</version>
+        </dependency>
+        <!--引入zxing-javase 依赖库-->
+        <dependency>
+            <groupId>io.sourceforge.gitee.components</groupId>
+            <artifactId>zxing-javase</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
+
+
 
         <dependency>
             <groupId>junit</groupId>
