--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,31 @@
     <groupId>com.ydp</groupId>
     <artifactId>miaosha</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <!-- 打包格式 -->
     <packaging>jar</packaging>
-
+    <!-- 打包插件 -->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <executable>true</executable>
+                    <layout>JAR</layout>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                        <configuration>
+                            <attach>false</attach>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
     <name>miaosha</name>
     <url>http://maven.apache.org</url>
 
@@ -18,6 +41,7 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.6.0</version>
     </parent>
+
     <dependencies>
         <!--启动器-->
         <dependency>
@@ -73,8 +97,24 @@
             <artifactId>zxing-javase</artifactId>
             <version>1.1.1</version>
         </dependency>
+        <!--引入热部署，试试更新代码无重启-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
 
-
+        <!-- 添加Hutool依赖 -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.7.16</version> <!-- 请使用最新的版本 -->
+        </dependency>
+        <!--引入SM3 加密依赖-->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.70</version>
+        </dependency>
 
 
         <dependency>
